--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"WindowSettings":{"WindowWidth":1920,"WindowTitle":"entree"}}
+{"WindowSettings":{"WindowWidth":1920,"WindowHeight":1080,"WindowTitle":"Entree"}}
