--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,15 +14,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
 
-    - name: Build
-      run: go build -v ./...
+      - name: Install C compiler
+        run: sudo apt-get install -y gcc
 
-    - name: Test
-      run: go test -v ./...
+      - name: Install ebiten dependencies
+        run: >
+          sudo apt install -y libc6-dev libglu1-mesa-dev libgl1-mesa-dev
+          libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev
+          libxxf86vm-dev libasound2-dev pkg-config
+
+      - name: Build
+        run: go build -v ./...
+
+      - name: Test
+        run: go test -v ./...
