--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -10,22 +7,17 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: '1.22'
 
-      - name: Install C compiler
-        run: sudo apt-get install -y gcc
-
-      - name: Install ebiten dependencies
+      - name: Install dependencies
         run: >
+          sudo apt-get install -y gcc
           sudo apt install -y libc6-dev libglu1-mesa-dev libgl1-mesa-dev
           libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev
           libxxf86vm-dev libasound2-dev pkg-config
@@ -35,3 +27,6 @@ jobs:
 
       - name: Test
         run: go test -v ./...
+
+      - name: Vet
+        run: go vet -v ./...
