--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,10 +17,9 @@ jobs:
 
       - name: Install dependencies
         run: >
-          sudo apt-get install -y gcc
-          sudo apt install -y libc6-dev libglu1-mesa-dev libgl1-mesa-dev
-          libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev
-          libxxf86vm-dev libasound2-dev pkg-config
+          sudo apt-get install -y gcc libc6-dev libglu1-mesa-dev
+          libgl1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev
+          libxrandr-dev libxxf86vm-dev libasound2-dev pkg-config
 
       - name: Build
         run: go build -v ./...
